Run TNT tracker with our own reid model successfully.

--- a/sct_model/configs/tracklet_pair_connectivity.yaml
+++ b/sct_model/configs/tracklet_pair_connectivity.yaml
@@ -23,7 +23,7 @@ MODEL:
     NUM_CLASSES: 667
     EMB_SIZE: 2048
 TRACKLET:
-  WINDOW_lEN: 64
+  WINDOW_LEN: 128
 TRAIN:
   LR: 0.0001
   LR_FACTOR: 0.1
