--- a/config/config.yaml
+++ b/config/config.yaml
@@ -5,3 +5,8 @@ PATH:
 DEVICE:
   TYPE: "cuda"
   GPU: 1
+
+REID:
+  WEIGHTS: "/home/apie/projects/MTMC2021/reid_model/checkpoints/model-0.305-best_mAP.pth"
+  NUM_CLASSES: 667
+  IMG_SIZE: [224, 224]
