--- a/sct_model/configs/tracklet_pair_connectivity.yaml
+++ b/sct_model/configs/tracklet_pair_connectivity.yaml
@@ -2,13 +2,14 @@ OUTPUT_ROOT: trackletpair_connectivity
 DIST_BACKEND: 'nccl'
 PI: 'acc'
 WORKERS: 4
+DEVICE: 0
 CUDNN:
   BENCHMARK: True
   DETERMINISTIC: False
   ENABLED: True
 DATASET:
   ROOT: '/home/apie/projects/MTMC2021/dataset'
-  IMG_NUM_PER_GPU: 8
+  IMG_NUM_PER_GPU: 1
   MEAN: [102.9801, 115.9465, 122.7717]
   STD: [1, 1, 1]
 MODEL:
@@ -29,17 +30,17 @@ TRAIN:
   LR_FACTOR: 0.1
   WEIGHT_DECAY: 0.0005
   LR_STEPS: [3000, 6000] 
-  MAX_ITERATIONS: 9000
+  MAX_ITERATIONS: 24000
   OPTIMIZER: adam
   RESUME: True
-  INPUT_MIN: 91
-  INPUT_MAX: 182 
+  INPUT_MIN: 224
+  INPUT_MAX: 224
   PRINT_FREQ: 100 
-  SAVE_INTERVAL: 2000
+  SAVE_INTERVAL: 4000
   SAVE_EVERY_CHECKPOINT: True
   VAL_WHEN_TRAIN: False
 TEST:
-  TEST_SIZE: (91, 182) # min_size, max_size
+  TEST_SIZE: (224, 224) # min_size, max_size
   OUT_DIR: 'output'
 
 
