--- a/config/config.yaml
+++ b/config/config.yaml
@@ -10,3 +10,11 @@ REID:
   WEIGHTS: "/home/apie/projects/MTMC2021/reid_model/checkpoints/model-0.305-best_mAP.pth"
   NUM_CLASSES: 667
   IMG_SIZE: [224, 224]
+  EMB_SIZE: 2048
+
+SCT:
+  WEIGHTS: "/home/apie/projects/MTMC2021/sct_model/tracklets/work_dirs/trackletpair_connectivity/2021-01-05-02-45/TrackletConnectivity_epoch003_iter024000_checkpoint.pth"
+  KERNEL_SIZE: [3, 5, 9, 13]
+  FEAT_CHANNELS: [16, 64, 128]
+  STACK_NUM: 3
+  WINDOW_LEN: 128
