--- a/config/config.yaml
+++ b/config/config.yaml
@@ -4,7 +4,7 @@ PATH:
 
 DEVICE:
   TYPE: "cuda"
-  GPU: 4
+  GPUS: [4, 5, 6]
 
 REID:
   WEIGHTS: "/home/apie/projects/MTMC2021/reid_model/checkpoints/model-0.305-best_mAP.pth"
