manually set batch size

--- a/mtc_model/config/config.yaml
+++ b/mtc_model/config/config.yaml
@@ -9,5 +9,6 @@ DEVICE:
 MCT: 
   E_LAYERS: 3
   FEATURE_DIM: 2048
-  LEARNING_RATE: 0.001
-  EPOCHS: 10
+  LEARNING_RATE: 0.0001
+  EPOCHS: 50
+  BATCH_SIZE: 64
