--- a/mtc_model/config/config.yaml
+++ b/mtc_model/config/config.yaml
@@ -5,12 +5,12 @@ PATH:
 
 DEVICE:
   TYPE: "cuda"
-  GPUS: [4, 5, 6]
+  GPU: 4
 
 MCT: 
   E_LAYERS: 3
   FEATURE_DIM: 2048
   LEARNING_RATE: 0.0001
-  EPOCHS: 50
+  EPOCHS: 100
   BATCH_SIZE: 64
-  WEIGHT: "/home/apie/projects/MTMC2021/mtc_model/checkpoints/best_model.pth"
+  WEIGHT: "/home/apie/projects/MTMC2021/mtc_model/checkpoints/mtc_epoch42.pth"
