--- a/mct_model/config/config.yaml
+++ b/mct_model/config/config.yaml
@@ -9,7 +9,8 @@ DEVICE:
 
 MCT: 
   FEATURE_DIM: 2048
-  LEARNING_RATE: 0.001
-  EPOCHS: 100
-  BATCH_SIZE: 1
-  WEIGHT: "/home/apie/projects/MTMC2021/mct_model/checkpoints/mct_epoch20.pth"
+  LEARNING_RATE: 0.0001
+  EASY_EPOCHS: 20
+  HARD_EPOCHS: 20
+  BATCH_SIZE: 64
+  WEIGHT: "/home/apie/projects/MTMC2021/mct_model/checkpoints/mct_epoch30.pth"
