update triplet loss

--- a/mct_model/config/config.yaml
+++ b/mct_model/config/config.yaml
@@ -10,7 +10,6 @@ DEVICE:
 MCT: 
   FEATURE_DIM: 2048
   LEARNING_RATE: 0.0001
-  EASY_EPOCHS: 20
-  HARD_EPOCHS: 20
+  EPOCHS: 100
   BATCH_SIZE: 64
-  WEIGHT: "/home/apie/projects/MTMC2021/mct_model/checkpoints/mct_epoch30.pth"
+  WEIGHT: "/home/apie/projects/MTMC2021/mct_model/checkpoints/mct_epoch100.pth"
