--- a/environment.yml
+++ b/environment.yml
@@ -1,3 +1,4 @@
+name: mtmc
 channels:
   - pytorch
   - main
@@ -46,25 +47,51 @@ dependencies:
   - zstd=1.4.5=h9ceee32_0
   - pip:
     - absl-py==0.11.0
+    - attrs==20.3.0
+    - blessings==1.7
     - cycler==0.10.0
+    - ffmpeg-python==0.2.0
+    - flake8==3.8.4
+    - flake8-import-order==0.18.1
+    - future==0.18.2
+    - gpustat==0.6.0
     - grpcio==1.34.0
     - importlib-metadata==3.3.0
+    - iniconfig==1.1.1
     - kiwisolver==1.3.1
+    - lapsolver==1.1.0
     - markdown==3.3.3
     - matplotlib==3.3.3
+    - mccabe==0.6.1
+    - motmetrics==1.2.0
     - numpy==1.19.4
+    - nvidia-ml-py3==7.352.0
     - opencv-python==4.4.0.46
+    - packaging==20.9
     - pandas==1.1.5
+    - pluggy==0.13.1
     - protobuf==3.14.0
+    - psutil==5.8.0
+    - py==1.10.0
+    - py-cpuinfo==7.0.0
+    - pycodestyle==2.6.0
+    - pyflakes==2.2.0
     - pyparsing==2.4.7
+    - pytest==6.2.2
+    - pytest-benchmark==3.2.3
     - python-dateutil==2.8.1
+    - pytrec-eval==0.5
     - pytz==2020.5
     - pyyaml==5.3.1
     - scipy==1.5.4
     - tensorboard==2.0.0
     - tensorboardx==1.9
+    - toml==0.10.2
     - tqdm==4.55.0
     - typing-extensions==3.7.4.3
     - werkzeug==1.0.1
+    - xmltodict==0.12.0
     - yacs==0.1.8
     - zipp==3.4.0
+prefix: /home/apie/.conda/envs/mtmc
+
