fix data preparation bug, add RW in the config

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -4,7 +4,7 @@ PATH:
 
 DEVICE:
   TYPE: "cuda"
-  GPUS: [1]
+  GPUS: [0]
 
 REID:
   WEIGHTS: "/home/apie/projects/MTMC2021_ver2/reid_model/checkpoints/model-0.305-best_mAP.pth"
@@ -15,11 +15,12 @@ REID:
 
 MCT:
   FEATURE_DIM: 2048
-  WEIGHT: "/home/apie/projects/MTMC2021_ver2/mct_model/checkpoints/mct_epoch5_merge.pth"
+  WEIGHT: "/home/apie/projects/MTMC2021_ver2/mct_model/checkpoints/baseline_2.pth"
   METHOD: "CIR"
   METRIC: "model"
   SIM_TH: 0.8
   CIR_TH: 0.8
+  RW: True
 
 DETECTION: "mask_rcnn"
 SCT: "tc"
