add cosine RW reranking

--- a/mct_model/config/config.yaml
+++ b/mct_model/config/config.yaml
@@ -5,7 +5,7 @@ PATH:
 
 DEVICE:
   TYPE: "cuda"
-  GPU: 1
+  GPU: 0
 
 MCT:
   FEATURE_DIM: 2048
@@ -13,6 +13,6 @@ MCT:
   WEIGHT_DECAY: 0.3
   EPOCHS: 10
   BATCH_SIZE: 16
-  RW: False
-  WEIGHT: "/home/apie/projects/MTMC2021_ver2/mct_model/checkpoints/mct_epoch5_hard.pth"
+  RW: True
+  WEIGHT: "/home/apie/projects/MTMC2021_ver2/mct_model/checkpoints/None_3.pth"
   
