--- a/config/config.yaml
+++ b/config/config.yaml
@@ -15,12 +15,12 @@ REID:
 
 MCT:
   FEATURE_DIM: 2048
-  WEIGHT: "/home/apie/projects/MTMC2021_ver2/mct_model/checkpoints/baseline+RW_best.pth"
+  WEIGHT: "/home/apie/projects/MTMC2021_ver2/mct_model/checkpoints/None_10.pth"
   METHOD: "CIR"
   METRIC: "model"
   SIM_TH: 0.95
   CIR_TH: 0.8
-  RW: True
+  RW: False
 
 DETECTION: "mask_rcnn"
 SCT: "tc"
