final version of paper

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -15,10 +15,10 @@ REID:
 
 MCT:
   FEATURE_DIM: 2048
-  WEIGHT: "/home/apie/projects/MTMC2021_ver2/mct_model/checkpoints/None_10.pth"
+  WEIGHT: "/home/apie/projects/MTMC2021_ver2/mct_model/checkpoints/baseline+RW+pro+cam+rankedm2.0a3.0_r0.5c1_5.pth"
   METHOD: "CIR"
   METRIC: "model"
-  SIM_TH: 0.95
+  SIM_TH: 0.85
   CIR_TH: 0.8
   RW: True
 
